# python-project-lvl2

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff-check.yml
gendiff/: __init__.py  generate_diff.py  generate_work_diff.py  plain.py  stylish.py
gendiff/formatter/: formatter.py  json_output.py  plain.py  stylish.py
gendiff/modules/: generate_diff.py  json_output.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff_json.py  test_generate_diff_plain.py  test_generate_diff_recur_json.py  test_generate_diff_recur_yaml.py  test_generate_diff_yaml.py  test_generate_json_output.py
tests/fixtures/: file1.yaml  file1_1.json  file1_2.json  file2.yaml  file2_1.json  file2_2.json  generate_diff_test1.txt  generate_diff_test2.txt  generate_diff_test3.txt  generate_json_output.txt
